--- a/package.json
+++ b/package.json
@@ -1,8 +1,27 @@
 {
-  "name": "clog",
+  "name": "@jaobrown/clog",
   "version": "0.1.0",
   "description": "Track and share your Claude Code usage",
   "type": "module",
+  "author": "Jared Brown <jared@jared.to>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jaobrown/clog.git"
+  },
+  "homepage": "https://github.com/jaobrown/clog#readme",
+  "bugs": {
+    "url": "https://github.com/jaobrown/clog/issues"
+  },
+  "keywords": [
+    "claude",
+    "claude-code",
+    "cli",
+    "statistics",
+    "usage",
+    "tracker",
+    "anthropic"
+  ],
   "bin": {
     "clog": "./dist/index.js"
   },
@@ -12,7 +31,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "boxen": "^8.0.1",
